src/objects/Serial_Number_Fault_Codes__c/Serial_Number_Fault_Codes__c.object-meta.xml
<CustomObject>
    <label>Serial Number Fault Codes</label>
    <nameField>
        <displayFormat>SNFC-{0000}</displayFormat>
        <label>Serial Number Fault Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serial Number Fault Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>