src/objects/Serial_Number_Fault_Codes__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <formula>FA_FV_Detail__r.Serial_Number__r.Order_Line__r.Order__r.End_Customer__c</formula>
    <label>End Customer</label>
    <type>Text</type>
</CustomField>