src/objects/Serial_Number_Fault_Codes__c/fields/FA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_Completion_Date__c</fullName>
    <formula>FA_FV_Detail__r.FA_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Completion Date</label>
    <type>Date</type>
</CustomField>