src/objects/Serial_Number_Fault_Codes__c/fields/FA_FV_Detail__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FV/FA Detail</label>
    <referenceTo>FA_FV_Detail__c</referenceTo>
    <relationshipLabel>Serial Number Fault Codes</relationshipLabel>
    <relationshipName>Serial_Number_Fault_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>