src/objects/Serial_Number_Fault_Codes__c/fields/FA_Status__c.field-meta.xml
<CustomField>
    <fullName>FA_Status__c</fullName>
    <formula>TEXT( FA_FV_Detail__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Status</label>
    <type>Text</type>
</CustomField>