src/objects/Serial_Number_Fault_Codes__c/fields/Failure_Modes__c.field-meta.xml
<CustomField>
    <fullName>Failure_Modes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Failure Modes</label>
    <referenceTo>Failure_Modes__c</referenceTo>
    <relationshipLabel>Serial Number Fault Codes</relationshipLabel>
    <relationshipName>Serial_Number_Fault_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>