src/objects/Serial_Number_Fault_Codes__c/fields/Fault_Specification__c.field-meta.xml
<CustomField>
    <fullName>Fault_Specification__c</fullName>
    <formula>TEXT( Failure_Modes__r.Fault_Specification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fault Specification</label>
    <type>Text</type>
</CustomField>