src/objects/Serial_Number_Fault_Codes__c/fields/Marketing_Family__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Family__c</fullName>
    <formula>FA_FV_Detail__r.Serial_Number__r.Marketing_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Family</label>
    <type>Text</type>
</CustomField>