src/objects/Serial_Number_Fault_Codes__c/fields/PDC_Level_2__c.field-meta.xml
<CustomField>
    <fullName>PDC_Level_2__c</fullName>
    <formula>TEXT(Failure_Modes__r.PDC_Level_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDC Level 2</label>
    <type>Text</type>
</CustomField>