src/objects/Serial_Number_Fault_Codes__c/fields/PIC_Level_2__c.field-meta.xml
<CustomField>
    <fullName>PIC_Level_2__c</fullName>
    <formula>TEXT(Failure_Modes__r.PIC_Level_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC Level 2</label>
    <type>Text</type>
</CustomField>