src/objects/Serial_Number_Fault_Codes__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>FA_FV_Detail__r.Serial_Number__r.Product_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>