src/objects/Serial_Number_Fault_Codes__c/fields/RMA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Received_Date__c</fullName>
    <formula>FA_FV_Detail__r.Serial_Number__r.Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Received Date</label>
    <type>Date</type>
</CustomField>